# Orizon

./: .gitignore  .luarc.json  CMakeLists.txt  build.sh  chatgpt  copy assets.ps1  git  main.cpp
.cache/clangd/index/: main.cpp.169879F961AC02BE.idx  test.cpp.E63CD5DAF700CAB4.idx
.github/workflows/: c-cpp.yml
assets/: 0x72_DungeonTilesetII_v1.6.tsj  EndTourButton.aseprite  background.aseprite  card_template.aseprite  card_template_back.aseprite  cross.aseprite  entities.json  entities.json1  entities.json11  game.json  game.json1  input.ini  map_project.tiled-session  map_test.tmj  test.frag
assets/Maps/: Test.tiled-session  test.json  test.tmx  tileset.tsj  tileset.tsx
assets/Particle/: test.json
assets/Scripting/: Card.lua  Draw.lua  Dummy.lua  Enemy.lua  EnemyManager.lua  Game.lua  GameManager.lua  Global.lua  MapManager.lua  Player.lua  StateMachine.lua  TiledMap.lua  Toto.lua  Utils.lua  addOne.gm  debug.lua  enemy.lua  helloWorld.lua  helloWorld2.lua  toto.lua
include/: Utils.hpp
include/Engine/: Core.hpp  EngineHud.hpp  Entity.hpp  IComponent.hpp  IEntity.hpp  Input.hpp  Lua.hpp  Math.hpp  OrizonMusic.hpp  QuadTree.hpp  RayCaster.hpp  Raytracer.hpp  RenderWindow.hpp  ResourcesManager.hpp  RessourcesManager.hpp  Shader.hpp  SpriteBatch.hpp  System.hpp  Time.hpp  Timer.hpp  config.hpp
include/Engine/Collision/: HashGrid.hpp  QuadTree.hpp
include/Engine/Collision/Layer/: CollidingLayer.hpp  TileMap.hpp
include/Engine/Components/: Animator.hpp  BoxCollider.hpp  Canvas.hpp  CustomComponents.hpp  Drawable.hpp  EmptyComponent.hpp  EntitySignature.hpp  Gravity.hpp  IComponent.hpp  Id.hpp  Layer.hpp  Light.hpp  OrizonMusic.hpp  Particles.hpp  Script.hpp  Sound.hpp  Sprite.hpp  Tag.hpp  Transform2D.hpp  Velocity.hpp  View.hpp
include/Engine/Graphical/: Line.hpp
include/Engine/Particle/: Particles.hpp
include/Engine/Scene/: IScene.hpp  Scene.hpp  SceneManager.hpp  Script.hpp
include/Engine/Scripting/GameMonkey/: gmArraySimple.h  gmByteCode.h  gmByteCodeGen.h  gmCodeTree.h  gmConfig.h  gmConfig_p.h  gmHash.h  gmIterator.h  gmMem.h  gmParser.cpp.h  gmStream.h  gmStreamBuffer.h  gmTableObject.h  gmThread.h  gmUtil.h  gmVariable.h
include/Game/: App.hpp  TiledMap.hpp
include/Game/CustomComponents/: CharacterController.hpp
include/Game/Entity/: Player.hpp
include/Game/Scenes/: GameScene.hpp
src/: test.cpp
src/Engine/: Core.cpp  EngineHud.cpp  Entity.cpp  Input.cpp  OrizonMusic.cpp  QuadTree.cpp  RayCaster.cpp  Raytracer.cpp  RenderWindow.cpp  Shader.cpp  SpriteBatch.cpp  System.cpp  Time.cpp
src/Engine/Collision/: QuadTree.cpp
src/Engine/Collision/Layer/: CollidingLayer.cpp  TileMap.cpp
src/Engine/Components/: Animator.cpp  BoxCollider.cpp  Canvas.cpp  Layer.cpp  Light.cpp  OrizonMusic.cpp  Particles.cpp  Script.cpp  Sound.cpp  Sprite.cpp  Tag.cpp
src/Engine/Graphical/: Line.cpp
src/Engine/Particle/: Particles.cpp
src/Engine/Scene/: Scene.cpp  SceneManager.cpp  Script.cpp
src/Engine/Scripting/GameMonkey/: gmByteCode.cpp  gmByteCodeGen.cpp  gmCodeGen.cpp  gmCodeTree.cpp  gmDebug.cpp  gmFunctionObject.cpp  gmLibHooks.cpp  gmMachine.cpp  gmMachineLib.cpp  gmOperators.cpp  gmStreamBuffer.cpp  gmThread.cpp  gmVariable.cpp
src/Game/: App.cpp  Player.hpp  TiledMap.cpp
src/Game/Scenes/: GameScene.cpp
